k8s/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: django-project
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8000
